<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starting_an_activity" />

        <Button
            android:id="@+id/appButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intent_within_own_app" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/starting_another_app" />

        <Button
            android:id="@+id/implicitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/implicit_intent" />

        <Button
            android:id="@+id/explicitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/explicit_intent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>